php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30967 Extending a class that extends mysqli
Submitted: 2004-12-02 21:34 UTC Modified: 2004-12-03 08:58 UTC
From: rbro at hotmail dot com Assigned:
Status: Closed Package: MySQLi related
PHP Version: 5CVS-2004-12-02 (dev) OS: Linux
Private report: No CVE-ID: None
 [2004-12-02 21:34 UTC] rbro at hotmail dot com
Description:
------------
I'm running into a problem when trying to extend a class that extends mysqli.  I cannot access any of the properties.  This is related to bug 28430 except here I am extending the class one level further.

Reproduce code:
---------------
<?php
error_reporting(E_ALL);

class a extends mysqli { }

class b extends a { }

$mysqli = new mysqli('localhost', 'username', 'password', 'db');
echo $mysqli->warning_count."\n";

$a = new a('localhost', 'username', 'password', 'db');
echo $a->warning_count."\n";

$b = new b('localhost', 'username', 'password', 'db');
echo $b->warning_count."\n";
?>


Expected result:
----------------
0
0
0


Actual result:
--------------
0
0

Notice: Undefined property:  b::$warning_count in /var/www/html/test.php on line 15

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-03 08:58 UTC] georg@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC