Fixed bug #30967 (properties in extended mysqli classes don't work)