ext/mysqli/tests/bug30967.phpt
@@ -1,0 +1,21 @@
+--TEST--
+Bug #30967 testcase (properties)
+--FILE--
+<?php
+	include "connect.inc";
+	
+	class mysql1 extends mysqli {
+	}
+
+	class mysql2 extends mysql1 {
+	}
+
+	$mysql = new mysql2("localhost", "root", "", "test");
+
+	$mysql->query("THIS DOES NOT WORK");
+	printf("%d\n", $mysql->errno);
+
+	$mysql->close();	
+?>
+--EXPECTF--
+1064
